# rules-bot

./: .dockerignore  .drone.yml  .gitignore  .gitpod.yml  Cargo.toml  Dockerfile  LICENSE  README.md  commands_dispatch.go  docker-compose.yml  management_commands.go  reactions.go  rules.go  sqlx-data.json
.github/workflows/: deploy.yaml
kube/: bot.yaml  db.yaml  namespace.yaml
migrations/: 20220224213705_create_guilds.down.sql  20220224213705_create_guilds.up.sql
migrations/2020-01-25-150255_create_guilds/: up.sql
migrations/2020-03-07-234131_add_member_role/: down.sql  up.sql
migrations/2020-09-19-171324_split_rules/: up.sql
migrations/2020-09-20-181459_pre-postface/: down.sql  up.sql
migrations/2021-06-10-083359_rules-unique/: down.sql  up.sql
src/: checks.rs  commands.rs  db.rs  errors.rs  main.rs  schema.rs
src/models/: guilds.rs  mod.rs  rules.rs
