[package]
name = "rules-bot"
version = "0.1.0"
authors = ["obayemi"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.3", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
serenity = "0.8"
log = "0.4.8"
env_logger = "0.7.1"
toml = "0.5.6"
serde_yaml = "0.8.13"
regex = "1.3.9"
lazy_static = "1.4.0"
serde = "1.0.116"
