[package]
name = "rules-bot"
version = "0.1.0"
authors = ["obayemi"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.5", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
serenity = "0.9.0-rc.2"
log = "0.4.11"
env_logger = "0.7.1"
toml = "0.5.7"
serde_yaml = "0.8.13"
regex = "1.4.0"
lazy_static = "1.4.0"
serde = "1.0.116"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3.6"
async-std = "1.6.5"
